<resources>
    <string name="app_name">PocketPoints</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="verify_delete_student_text">Do you want to delete this student now?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="new_student">New Student</string>
    <string name="name_prompt">Name</string>
    <string name="row_image_content_description">Student Image</string>
    <string name="row_star_content_description">Star</string>
    <string name="row_student_name">Student Name</string>
    <string name="row_sticker_count">Sticker Count</string>
    <string name="edit_students"><u>Edit Students</u></string>
    <string name="add_student">Add New Student</string>
    <string name="done_edit">Done Editing</string>
    <string name="name_header"><u>Student Name</u></string>
    <string name="row_smile_image_content_description">Sticker</string>
    <string name="sticker_header"><u>Stickers</u></string>
    <string name="row_edit_student_icon">Edit Student</string>
    <string name="delete_success_toast">Student Deleted</string>
    <string name="delete_failure_toast">Deletion Failed!</string>
    <string name="save_success_toast">Student Saved</string>
    <string name="save_failure_toast">Save Failed!</string>
    <string name="save_failure_empty_name_toast">Can\'t save student with an empty name</string>
    <string name="no_camera_toast">Unable to take picture</string>
    <string name="clear_all_stickers">Clear All</string>
    <string name="undo_sticker_addition">Undo</string>
    <string name="save_photo_failed">Sorry, can\'t take a picture right now!</string>
    <string name="no_photo_taken">No photo taken</string>
    <string name="take_photo">Take photo</string>
    <string name="name_label">Student Name:</string>
</resources>
