<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_student"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/studentImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/studentName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/studentCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/studentImageButton"
        android:layout_marginBottom="64dp"
        android:text="@string/cancel_button" />

    <Button
        android:id="@+id/studentSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/studentDeleteButton"
        android:layout_alignBottom="@+id/studentDeleteButton"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/studentCancelButton"
        android:text="@string/save_button" />

    <EditText
        android:id="@+id/editStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/studentName"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/studentDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/studentCancelButton"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@+id/studentName"
        android:text="@string/delete_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="17dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>